--- a/09_aggregate.ipynb
+++ b/09_aggregate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,7 @@
     "    m5['tradeable'] = m5['tradeable'].astype('bool')\n",
     "    m5['halted'] = m5['halted'].astype('bool')      \n",
     "    m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "    #m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
-    "\n",
+    " \n",
     "    # For the daily, we only consider a bar untradeable if it has zero trade prices. So if all \"tradeable\" is False. Also we only consider regular trading hours.\n",
     "    bars = remove_extended_hours(bars)\n",
     "    d1 = bars.resample('D').agg({'open': 'first', \n",
@@ -64,8 +63,7 @@
     "    d1 = d1.dropna()\n",
     "    d1['tradeable'] = d1['tradeable'].astype('bool')\n",
     "    d1['halted'] = d1['halted'].astype('bool')   \n",
-    "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "    #d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)"
+    "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)"
    ]
   },
   {
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +128,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see there are a lot of stupid spikes in the data. These are because of late reported trades and make the data almost useless if uncleaned. However cleaning them is very cumbersome because you need to recreate the bars from tick data."
+    "As you can see there are a lot of stupid spikes in the data. These are because of late reported trades and make the data almost useless if uncleaned. However cleaning them is very cumbersome because you need to recreate the bars from tick data.\n",
+    "\n",
+    "I actually e-mailed Polygon.io about this issue. They said they would propose to remove the late trades."
    ]
   },
   {
@@ -140,6 +140,11 @@
     "# 9.2 Updates\n",
     "Rerun after updating END_DATE."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
