--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 11. Simulating screeners\n",
-    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>processed/cache/</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day.\n",
+    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>output/screens</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day.\n",
     "\n",
     "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume, you can only know this after day 14. So I always shift the trading days by 1 to account for this. Then all statistics should be available at the corresponding date."
    ]
@@ -16,8 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import remove_extended_hours, get_market_dates, get_tickers, get_data, first_trading_date_after_equal, first_trading_date_after\n",
+    "from utils import remove_extended_hours, get_market_dates, get_tickers, get_data, \\\n",
+    "    first_trading_date_after_equal, first_trading_date_after, last_trading_date_before, last_trading_date_before_equal\n",
     "from datetime import datetime, date, timedelta, time\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,7 +35,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Top liquid stocks**"
+    "**Top liquid stocks**\n",
+    "\n",
+    "In backtesting, instead of screening all stocks, for most systems I only need e.g. the S&P500 stocks. However I don't care about the exact holdings of the S&P500. The only reason why I would choose the index is because of volume and liquidity. However then turnover is way more informative.\n",
+    "\n",
+    "So to create the T100, T500, T1500 and T3000 indices, I simply select the stocks with the higher turnover in the past half year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://databento.com/docs/examples/equities/equities-premarket-movers/example\n",
+    "tickers = get_tickers()\n",
+    "tickers = tickers[tickers['type'] == 'CS'] # No ETFs, ADRs and indices\n",
+    "dates_and_IDs = {} # {'2022-01-01': ['AAPL', 'MSFT', ...], '2022-07-01': ['NVDA', 'AMD', ...], ...}\n",
+    "tickers = tickers.head(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through half years\n",
+    "for end_datetime in pd.date_range(start=date(2019, 6, 1),end=date(2024, 3, 1),freq='6M', inclusive='right'):\n",
+    "    start_date = end_datetime.date() - relativedelta(months=6)\n",
+    "    # Get trading dates\n",
+    "    end_date = last_trading_date_before_equal(end_datetime.date())\n",
+    "    end_date = last_trading_date_before(end_date) # Subtract 1 day to account for look-ahead bias\n",
+    "    start_date = first_trading_date_after_equal(start_date)\n",
+    "\n",
+    "    all_bars = []\n",
+    "    # Find IDs with data in the specific half year that are not delisted before end of year\n",
+    "    for _, row in tickers[tickers['end_date'] >= end_date].iterrows():\n",
+    "        all_bars.append(get_data(row['ID'], start_date, end_date, columns=['close', 'volume']))\n",
+    "\n",
+    "    # Concatenate (close and volume only), it will be around 1 million rows and just 3 columns, so it's feasible\n",
+    "    # Calculate turnover\n",
+    "    # all_bars = all_bars.groupby(\"ID\").agg({\"volume\": \"sum\", \"close\": \"avg\"})\n",
+    "    # all_bars['turnover'] = all_bars['close'] * all_bars['volume']\n",
+    "    # all_bars.sort_values(by=\"change\", ascending=False, inplace=True)\n",
+    "    # dates_and_IDs[DATE] = list(all_bars.head(500).index)\n",
+    "\n",
+    "# Reindex to all trading days\n",
+    "\n",
+    "# Store to json\n"
    ]
   },
   {
